[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonolus-models"
version = "0.2.6.3"
description = "Define a Pydantic model for use within the Sonolus server and similar environments."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["sonolus", "pydantic", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/yourusername/sonolus-models"
Repository = "https://github.com/yourusername/sonolus-models"
